--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: minima
-author: rberghuis
-description: personal blog
+author: rbeghuis
+description: Gibberish of a Microsoft 365 Purview techie
