--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,14 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+
+# Cayman template #
+###################
+_site
+.sass-cache
+.bundle
+Gemfile.lock
+*.gem
+vendor/*
+.jekyll-metadata
