--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,28 @@
-theme: minima
-author: rberghuis
+title: Robbert Berghuis personal blog
 description: Gibberish of a Microsoft 365 Purview techie
+show_downloads: false
+
+baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
+url: "" # change this to the base hostname & protocol for your site
+
+google_analytics:
+
+# cayman-blog date format
+# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
+cayman-blog:
+  date_format: "%b %-d, %Y"
+
+theme: # leave it empty
+
+# social
+author: rberghuis
+site:
+  github.owner_name: rberghuis
+  github.owner_url: https://github.com/rberghuis/
+linkedin_username: robbert.berghuis
+
+plugins:
+  - jekyll-target-blank
+
+target-blank:
+    rel: nofollow
